--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jugoya.github.io/todoapp",
+  "homepage": "https://jugoya.github.io/todoApp",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
